--- a/signup.html
+++ b/signup.html
@@ -8,9 +8,16 @@
 </head>
 <body>
     <section>
-        <div class="login-box">
+        <div class="signup-box">
             <form action="">
-                <h1>Login</h1>
+                <h1>Sign up</h1>
+                <div class="input-box-firstname">
+                    <input type="text" required>
+                    <label>First Name</label>
+                </div><div class="input-box-lastname">
+                    <input type="text" required>
+                    <label>Last Name</label>
+                </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon
                          name="mail"></ion-icon></span>
@@ -23,15 +30,16 @@
                     <input type="password" required>
                     <label>Password</label>
                 </div>
-                <div class="remember-forgot">
-                    <label><input type="checkbox">Remember
-                         me</label>
-                         <a href="#">Forgot Password?</a>
+                <div class="input-box">
+                    <span class="icon"><ion-icon 
+                        name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
+                    <label>Repeat Password</label>
                 </div>
-                         <button type="submit">Login</button>
-                         <div class="register-link">
-                            <p>Don't have an account?<a href="./signup.html">Register</a></p>
-                         </div>
+                    <button type="submit">Submit</button>
+                <div class="register-link">
+                   <a href="./index.html">Return</a>
+                </div>
                 </div>
             </form>
         </div>
